tests/negative/class/class_protected_method_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Protected methods cannot be called from outside the class hierarchy.

class Base {
    protected reveal(): int {
        return 42;
    }
}

function main() {
    let base = new Base();
    print(base.reveal());
}
